<resources>
    <string name="app_name">My Resume</string>
    <string name="send_email">Email Theda</string>

    <string name="resume_title">Theda K. Rogers</string>

    <string name="resume_line1">Theda K. Rogers</string>
    <string name="resume_line2">Resume</string>
    <string name="resume_line3">Seeking Android and Java developer opportunities</string>
    <string name="resume_line4">Resume for Theda K. Rogers</string>


    <string name="contact_info">Contact Information</string>
    <string name="skills_info">Skills and Talents</string>
    <string name="Experience_Clients">Experience and Client List</string>
    <string name="portfolio_title">GitHub Information: github.com/crayonwriter</string>

    <!--Tab titles-->
    <string name="home_tab">Home</string>
    <string name="contact_tab">Contact</string>
    <string name="skills_tab">Skills</string>
    <string name="experience_tab">Experience</string>
    <string name="portfolio_tab">Portfolio</string>
    <string name="CellphoneNumber">(770)744-0434</string>
    <string name="Name">Theda K. Rogers</string>
    <string name="EmailAddress">crayonwriter@gmail.com</string>
    <string name="GithubInfo">github: crayonwriter</string>
    <string-array name="skills">
        <item>Java</item>
        <item>Git</item>
        <item>Typing 60–80wpm</item>
        <item>Android Studio</item>
        <item>Microsoft Word, Excel</item>
    </string-array>
</resources>
